<resources>
    <string name="app_name">UTTER</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="app_info">BEST WAY TO LEARN</string>
    <string name="languageOne">English</string>
    <string name="languageTwo">GERMAN</string>
    <string name="appDescription">DETECT ANY OBJECT FROM A PIC \n AND TRANSLATE TO ANY LANGUAGE \n AS SIMPLE AS THAT !</string>
    <string name="logo">LOGO</string>
    <string name="OpenCameraToast">TAKE A CLEAR PICTURE </string>
    <string name="languageTranslate">Translate</string>
    <string name="capturedImage">Captured Image</string>
    <string name="label_detection">\tLABEL DETECTION</string>
    <string name="text_translate">\tTEXT TRANSLATION</string>
    <string name="retake_picture">\tTAKE AGAIN</string>
    <string name="API_KEY">AIzaSyByiGb0x-NGhEuO4a0DaHd8E6oVnHHXqq0</string>
    <string name="spacer">-</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="lanuagePreferrence">lanuagePreferrence</string>
    <string name="languageSettings">languagesettings</string>
    <string name="german">German</string>
    <string name="english">English</string>
    <string name="enterTranslateText">Enter text here to translate !</string>
    <string name="resultTranslateText">Translated text !</string>


    <string-array name="lanugae_arrray">
        <item>Afrikaans</item>
        <item> Albanian</item>
        <item> Amharic</item>
        <item>Arabic</item>
        <item>Armenian</item>
        <item>Azeerbaijani</item>
        <item>Basque</item>
        <item>Belarusian</item>
        <item>Bengali</item>
        <item> Bosnian</item>
        <item> Bulgarian</item>
        <item>Catalan</item>
        <item>Corsican</item>
        <item>Croatian</item>
        <item> Czech</item>
        <item> Danish</item>
        <item> Dutch</item>
        <item> English</item>
        <item>Esperanto</item>
        <item>Estonian</item>
        <item>Finnish</item>
        <item>French</item>
        <item>Frisian</item>
        <item>Galician</item>
        <item>Georgian</item>
        <item>German</item>
        <item>Greek</item>
        <item>Gujarati</item>
        <item> Haitian Creole</item>
        <item>Hausa</item>
        <item>Hungarian</item>
        <item>Icelandic</item>
        <item>Igbo</item>
        <item>Indonesian</item>
        <item>Irish</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Javanese</item>
        <item>Kannada</item>
        <item>Kazakh</item>
        <item>Khmer</item>
        <item>Korean</item>
        <item> Kurdish</item>
        <item>Kyrgyz</item>
        <item>Lao</item>
        <item>Latin</item>
        <item>Latvian</item>
        <item>Lithuanian</item>
        <item>Luxembourgish</item>
        <item>Macedonian</item>
        <item>Malagasy</item>
        <item>Malay</item>
        <item>Malayalam</item>
        <item>Maltese</item>
        <item>Maori</item>
        <item>Marathi</item>
        <item>Mongolian</item>
        <item>Nepali</item>
        <item>Norwegian</item>
        <item>Pashto</item>
        <item>Persian</item>
        <item>Polish</item>
        <item>Portuguese</item>
        <item>Punjabi</item>
        <item>Romanian</item>
        <item>Russian</item>
        <item>Samoan</item>
        <item>Scots Gaelic</item>
        <item>Serbian</item>
        <item>Sesotho</item>
        <item>Shona</item>
        <item>Sindhi</item>
        <item>Sinhala</item>
        <item>Slovak</item>
        <item>Slovenian</item>
        <item>Somali</item>
        <item>Spanish</item>
        <item>Sundanese</item>
        <item>Swahili</item>
        <item>Swedish</item>
        <item>Tagalog</item>
        <item>Tajik</item>
        <item>Tamil</item>
        <item>Telugu</item>
        <item> Thai</item>
        <item>Turkish</item>
        <item>Ukrainian</item>
        <item>Urdu</item>
        <item>Uzbek</item>
        <item>Vietnamese</item>
        <item>Welsh</item>
        <item>Xhosa</item>
        <item>Yiddish</item>
        <item>Yoruba</item>
        <item>Zulu</item>

    </string-array>
    <string-array name="lanuage_code_array">

        <item>	af	</item>
        <item>	sq	</item>
        <item>	am	</item>
        <item>	ar	</item>
        <item>	hy	</item>
        <item>	az	</item>
        <item>	eu	</item>
        <item>	be	</item>
        <item>	bn	</item>
        <item>	bs	</item>
        <item>	bg	</item>
        <item>	ca	</item>
        <item>	co	</item>
        <item>	hr	</item>
        <item>	cs	</item>
        <item>	da	</item>
        <item>	nl	</item>
        <item>	en	</item>
        <item>	eo	</item>
        <item>	et	</item>
        <item>	fi	</item>
        <item>	fr	</item>
        <item>	fy	</item>
        <item>	gl	</item>
        <item>	ka	</item>
        <item>	de	</item>
        <item>	el	</item>
        <item>	gu	</item>
        <item>	ht	</item>
        <item>	ha	</item>
        <item>	hu	</item>
        <item>	is	</item>
        <item>	ig	</item>
        <item>	id	</item>
        <item>	ga	</item>
        <item>	it	</item>
        <item>	ja	</item>
        <item>	jw	</item>
        <item>	kn	</item>
        <item>	kk	</item>
        <item>	km	</item>
        <item>	ko	</item>
        <item>	ku	</item>
        <item>	ky	</item>
        <item>	lo	</item>
        <item>	la	</item>
        <item>	lv	</item>
        <item>	lt	</item>
        <item>	lb	</item>
        <item>	mk	</item>
        <item>	mg	</item>
        <item>	ms	</item>
        <item>	ml	</item>
        <item>	mt	</item>
        <item>	mi	</item>
        <item>	mr	</item>
        <item>	mn	</item>
        <item>	ne	</item>
        <item>	no	</item>
        <item>	ps	</item>
        <item>	fa	</item>
        <item>	pl	</item>
        <item>	pt	</item>
        <item>	pa	</item>
        <item>	ro	</item>
        <item>	ru	</item>
        <item>	sm	</item>
        <item>	gd	</item>
        <item>	sr	</item>
        <item>	st	</item>
        <item>	sn	</item>
        <item>	sd	</item>
        <item>	si	</item>
        <item>	sk	</item>
        <item>	sl	</item>
        <item>	so	</item>
        <item>	es	</item>
        <item>	su	</item>
        <item>	sw	</item>
        <item>	sv	</item>
        <item>	tl	</item>
        <item>	tg	</item>
        <item>	ta	</item>
        <item>	te	</item>
        <item>	th	</item>
        <item>	tr	</item>
        <item>	uk	</item>
        <item>	ur	</item>
        <item>	uz	</item>
        <item>	vi	</item>
        <item>	cy	</item>
        <item>	xh	</item>
        <item>	yi	</item>
        <item>	yo	</item>
        <item>	zu	</item>


    </string-array>
</resources>
