<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wall_1"
    android:orientation="vertical"
    tools:context="com.kalki.psbhat.cameraapplication.Home">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_gravity="top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:contentDescription="@string/logo"
                    app:srcCompat="@drawable/ic_logo" />

                <TextView
                    android:layout_marginTop="10dp"
                    android:id="@+id/appName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:keepScreenOn="true"
                    android:text="@string/app_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:typeface="normal" />
            </LinearLayout>



        </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/appInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:keepScreenOn="true"
            android:text="@string/app_info"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/appDescription"
            android:padding="@dimen/languagepadding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:keepScreenOn="true"
            android:text="@string/appDescription"
            android:textColor="@color/colorText"
            android:textSize="@dimen/normalTextSize"
             />



    </LinearLayout>

    <LinearLayout
        android:id="@+id/languageLayout"
        android:layout_margin="@dimen/ButtonSideMargin"
        android:background="@drawable/border_round_custom_toast"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:entries="@array/lanugae_arrray"
            android:gravity="center"
            android:keepScreenOn="true"
            android:spinnerMode="dialog"
            android:textColor="@color/colorText" />



    </LinearLayout>

    <!--
    <fragment
        android:id="@+id/youtube_player_fragment"
        android:name="com.google.android.youtube.player.YouTubePlayerFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    -->

        <Button
            android:id="@+id/translateNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/floatingButtonMargin"
            android:layout_marginTop="@dimen/floatingButtonMargin"
            android:background="@drawable/button_template"
            android:drawableLeft="@android:drawable/ic_menu_camera"
            android:drawableStart="@drawable/ic_camera_icon"
            android:paddingEnd="@dimen/ButtonSideMargin"
            android:paddingLeft="@dimen/ButtonSideMargin"
            android:paddingRight="@dimen/ButtonSideMargin"
            android:text="@string/label_detection"
            android:tint="@android:color/background_dark" />

        <Button
            android:id="@+id/textTranslate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/floatingButtonMargin"
            android:layout_marginTop="@dimen/floatingButtonMargin"
            android:background="@drawable/button_template"
            android:drawableLeft="@android:drawable/ic_menu_camera"
            android:drawableStart="@drawable/ic_text_translate"
            android:paddingEnd="@dimen/ButtonSideMargin"
            android:paddingLeft="@dimen/ButtonSideMargin"
            android:paddingRight="@dimen/ButtonSideMargin"
            android:text="@string/text_translate"
            android:tint="@android:color/background_dark" />

    </LinearLayout>



    <com.google.android.gms.ads.AdView

        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-8117488179190169/5289476664">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
